# PythonStarterPackage

./: .gitignore  README.md  app.py  main.py  requirements.txt  setup.cfg  setup.py
config/: config.txt
doc/: PyPi Setup Guide.md  PyPi_Setup_Guide.md  PythonStarterPackage Setup Guide.md  PythonStarterPackage Tutorial.md  PythonStarterPackage_Tutorial.md
src/python_starter_package/: __init__.py  handler.py
src/python_starter_package/utils/: configparser.py  configurations.py
src/pythonstarterpackage/: __init__.py  __main__.py  main.py  starterpkg.py
src/pythonstarterpackage/utils/: configloader.py  configparser.py  filemodder.py  read.py
test/: test_client.py  test_main.py
