[metadata]
name = PythonStarterPackage
version = 0.4.3
author = Arctic
author_email = arctic.technology.mail@gmail.com
license = MIT
description = Python starter package, a template for creating your own python packages.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = starter, package, template
url = https://github.com/ArcticTechnology/PythonStarterPackage
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	Intended Audience :: Financial and Insurance Industry
	Topic :: Education
	Topic :: Software Development
	Topic :: Software Development :: Libraries

[options]
install_requires =
	requests>=2.27.1
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	pythonstarterpackage = pythonstarterpackage.main:main

[options.package_data]
pythonstarterpackage =
	data/*.json

[options.data_files]
pythonstarterpackage/config = config/config.json